# karios-desktop

./: .gitignore  .prettierignore  MIGRATION.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
services/data-sync-service/: .coverage  README.md  coverage.json  package.json  pyproject.toml  server_entry.py
services/data-sync-service/scripts/: run_backtest.py
services/data-sync-service/src/data_sync_service/: __init__.py  config.py  main.py
services/data-sync-service/src/data_sync_service/api/: __init__.py  broker_routes.py  dashboard_routes.py  industry_flow_routes.py  journal_routes.py  market_sentiment_routes.py  news_routes.py  query_routes.py  routes.py  simtrade_routes.py  sync_routes.py  system_prompts_routes.py  trade_review_routes.py  tv_chrome_routes.py  tv_routes.py
services/data-sync-service/src/data_sync_service/db/: __init__.py  broker.py  daily.py  index_basic.py  index_daily.py  industry_fund_flow.py  industry_mainline_metrics.py  industry_mainline_scores.py  journal.py  macro_daily.py  market_detail.py  market_sentiment.py  news.py  stock_basic.py  stoploss.py  sync_job_record.py  system_prompts.py  trade_calendar.py  trade_review.py  tv.py  tv_chrome_settings.py
services/data-sync-service/src/data_sync_service/scheduler/: __init__.py  adj_factor_job.py  close_catchup_job.py  close_sync_job.py  daily_sync_job.py  foo_job.py  hk_basic_job.py  hk_daily_job.py  (+5 more)
services/data-sync-service/tests/: test_api.py  test_backtest_engine.py  test_broker.py  test_broker_utils.py  test_close_sync_utils.py  test_daily_db.py  test_daily_utils.py  test_dashboard_index_signal.py  test_dashboard_utils.py  test_engine_full.py  test_engine_utils.py  test_foo.py  test_hk_basic.py  test_hk_basic_utils.py  test_hk_daily.py  test_hk_daily_utils.py  test_index_daily.py  test_index_daily_db.py  test_index_daily_utils.py  test_industry_fund_flow_utils.py  test_macro.py  test_macro_daily_db.py  test_macro_daily_utils.py  test_mainline_scoring.py  test_mainline_utils.py  test_market_bars_utils.py  test_market_detail_utils.py  test_market_environment_zh.py  test_market_environment_zh_utils.py  test_market_quotes_utils.py  test_market_regime_signals.py  test_market_regime_sync_window.py  test_market_regime_utils.py  test_market_regime_volume_estimation.py  test_market_sentiment_intraday.py  test_market_sentiment_utils.py  test_realtime_quote_utils.py  test_simtrade_routes_utils.py  test_stock_basic_db.py  test_testback_db_utils.py  (+24 more)
services/quant-service/: karios.sqlite3-shm  karios.sqlite3-wal  main.py  package.json  pyproject.toml  server_entry.py
services/quant-service/market/: __init__.py  akshare_provider.py
services/quant-service/scripts/: tv_screener_capture.py
services/quant-service/tests/: test_broker_accounts.py  test_broker_import.py  test_broker_state.py  test_cn_daily_bars_fallback.py  test_cn_industry_fund_flow.py  test_cn_sentiment_sync.py  test_dashboard.py  test_eod_sync.py  test_healthz.py  test_intraday_rank.py  test_leader_stocks.py  test_mainline.py  test_market.py  test_quant2d_calibration.py  test_rank_next2d.py  test_strategy.py  test_system_prompt.py  test_system_prompt_presets.py  test_tv_integration.py  test_watchlist_trendok.py
services/quant-service/tools/: migrate_sqlite_to_duckdb.py
services/quant-service/tv/: __init__.py  capture.py  normalize.py
(+185 files in other folders)
