[project]
name = "quant-service"
version = "0.1.0"
description = "Quant/data service for Karios Desktop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.16.0",
    "fastapi>=0.125.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # Line length is handled by `ruff format`; enforcing E501 in a SQL/HTTP-heavy service
    # creates noisy churn with little readability benefit.
    "E501",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
